# python-no-name-paper

./: .cookiecutterrc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  noxfile.py  pyproject.toml
src/no_name_paper/: __main__.py  cli.py
tests/: test_no_name_paper.py
